<resources>
    <string name="app_name">Battleships</string>
    <string name="logout_button">Cerrar sesión</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register_title">REGISTRO</string>
    <string name="register_label">Por favor, introduce tu número de teléfono</string>
    <string name="phone_prefix">"+34 "</string>
    <string name="register_extra_label">Recibirás un SMS</string>
    <string name="verification_title">Verificación</string>
    <string name="verification_label">Introduce el código de verificación</string>
    <string name="verification_hint">Código de verificación</string>
    <string name="background">backgroundScreen.jpg</string>
    <string name="enemy_fleet">Flota enemiga</string>
    <string name="my_fleet">Tu flota</string>
    <string name="user_image_description">User image</string>
    <string name="friend_delete_button">Friend delete button</string>
    <string name="friend_search_hint">Busca usuarios por su email...</string>
    <string name="friends_pending_label">Pendientes</string>
    <string name="friends_label">Amigos</string>
    <string name="friend_requests_label">Peticiones</string>
    <string name="friend_accept_button">Aceptar</string>
    <string name="empty_section_text">Nada que mostrar</string>
    <string name="remaining_cells_to_setup">Restantes: %d</string>
    <string name="vertical_switch_label">Colocar en vertical</string>
    <string name="reset_grid_label">Limpiar</string>
    <string name="finish_setup_label">Finalizar</string>
    <string name="setup_frame_title">Coloca tu flota</string>
    <string name="placing_ship_label">Colocando: %s</string>
    <string name="battles_label">Tus batallas</string>
    <string name="battle_label">Batalla</string>
    <string name="alternate_board_button_text">Alternar</string>
    <string name="game_info_label">Sector de %s</string>
</resources>