<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/game_board"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/menu_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/menu_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        android:padding="@dimen/margin_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/game_board"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/game_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:padding="16dp"
            android:text="@string/setup_frame_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/remaining_setup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:text="@string/remaining_cells_to_setup"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

        <TextView
            android:id="@+id/current_ship_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:text="@string/placing_ship_label"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Switch" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/vertical_switch"
            style="@style/TextAppearance.AppCompat.Widget.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_8dp"
            android:outlineProvider="paddedBounds"
            android:text="@string/vertical_switch_label"
            app:switchPadding="@dimen/margin_8dp" />

        <LinearLayout
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_8dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset_grid_label" />

            <Button
                android:id="@+id/confirm_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finish_setup_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>