<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/friend_searchView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:autofillHints=""
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:queryHint="@string/friend_search_hint"
                tools:background="@color/black_overlay" />

            <!--            -->

            <TextView
                style="@style/friends_section_title"
                android:text="@string/friend_requests_label" />

            <TextView
                android:id="@+id/requests_empty_label"
                style="@style/empty_section_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friends_requests_recyclerView"
                style="@style/recycler_view" />

            <!--            -->

            <TextView
                style="@style/friends_section_title"
                android:text="@string/friends_pending_label" />

            <TextView
                android:id="@+id/pending_requests_empty_label"
                style="@style/empty_section_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friends_pending_recyclerView"
                style="@style/recycler_view" />

            <!--            -->

            <TextView
                style="@style/friends_section_title"
                android:text="@string/friends_label" />

            <TextView
                android:id="@+id/friends_empty_label"
                style="@style/empty_section_layout" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friends_recyclerView"
                style="@style/recycler_view" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
